# pybind11-mdspan

./: .editorconfig  CMakeLists.txt  LICENSE  default.nix  log.h  mdspan.nix  pybind11-mdspan.hpp  pymdspan.cpp  pymdspan.nix  test.py  test_pymdspan.py  tests.nix
include/pybind11/: log.h  mdspan.h
tests/: CMakeLists.txt  pymdspan.cpp  test_pymdspan.py
